[package]
name = "raycast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
macroquad = { version = "0.4.0", features = ["audio"] }

[dev-dependencies]
glam = "0.24.0"
macroquad = "0.4.0"

[profile.release]
debug = 1
